--- a/portfolio_site/vercel.json
+++ b/portfolio_site/vercel.json
@@ -1,9 +1,9 @@
 {
+  "version": 2,
   "builds": [
-    { "src": "public/**", "use": "@vercel/static" },
-    { "src": "api/*.js", "use": "@vercel/node" }
+    { "src": "public/**/*", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/api/messages", "dest": "/api/messages.js" }
+    { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
