--- a/portfolio_site/vercel.json
+++ b/portfolio_site/vercel.json
@@ -4,6 +4,7 @@
     { "src": "public/**/*", "use": "@vercel/static" }
   ],
   "routes": [
+    { "src": "^/blog/?$", "dest": "/public/blog.html" },
     { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
