--- a/portfolio_site/vercel.json
+++ b/portfolio_site/vercel.json
@@ -5,8 +5,6 @@
     { "src": "api/**/*.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "^/api/(.*)", "dest": "/api/$1" },
-    { "src": "^/blog/?$", "dest": "/public/blog.html" },
-    { "src": "/(.*)", "dest": "/public/$1" }
+    { "src": "^/blog/?$", "dest": "/blog.html" }
   ]
 }
