--- a/portfolio_site/vercel.json
+++ b/portfolio_site/vercel.json
@@ -5,6 +5,9 @@
     { "src": "api/**/*.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "^/blog/?$", "dest": "/blog.html" }
+    { "src": "^/$", "dest": "/public/index.html" },
+    { "src": "^/blog/?$", "dest": "/public/blog.html" },
+    { "src": "^/api/(.*)$", "dest": "/api/$1" },
+    { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
