--- a/portfolio_site/vercel.json
+++ b/portfolio_site/vercel.json
@@ -1,13 +1,5 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "public/**/*", "use": "@vercel/static" },
-    { "src": "api/**/*.js", "use": "@vercel/node" }
-  ],
   "routes": [
-    { "src": "^/$", "dest": "/public/index.html" },
-    { "src": "^/blog/?$", "dest": "/public/blog.html" },
-    { "src": "^/api/(.*)$", "dest": "/api/$1" },
-    { "src": "/(.*)", "dest": "/public/$1" }
+    { "src": "^/blog/?$", "dest": "/blog.html" }
   ]
 }
