--- a/portfolio_site/vercel.json
+++ b/portfolio_site/vercel.json
@@ -5,7 +5,8 @@
     }
   },
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1.js" }
+    { "src": "^/api/(.*)$", "dest": "/api/$1.js" },
+    { "src": "^/blog/?$", "dest": "/public/blog.html" }
   ]
 }
 
